IMR 219 header overlap fix [skip-ci]

--- a/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
+++ b/ui.frontend/src/main/webpack/dependencies/site/scss/common.scss
@@ -545,7 +545,10 @@ header .container-content {
     }
   }
 
-  .top-page-container.container.responsivegrid.partial-background {
+  .top-page-container.container.responsivegrid.partial-background,
+  div.short-searchContainer:has(div.aem.title-container.results)
+    div#rechercheMetier
+    div.background-Yellow {
     padding-top: 12rem;
   }
 
